Fix some UI issue on mobile Safari

--- a/style/styles.css
+++ b/style/styles.css
@@ -1,3 +1,8 @@
+html,
+body {
+    overflow-x: hidden;
+}
+
 body {
     font-family: 'Inter', sans-serif;
     margin: 0;
@@ -6,12 +11,11 @@ body {
     color: #e0e0e0;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    min-height: 100dvh;
 }
 
 .container {
     max-width: 800px;
-    width: 100%;
     margin: 0 auto;
     padding: 0 20px;
 }
@@ -39,7 +43,7 @@ header {
 main {
     padding: 20px;
     max-width: 800px;
-    width: 100%;
+    width: calc(100% - 40px);
     margin: 0 auto;
     flex-grow: 1;
 }
